--- a/templates/habitaciones.html
+++ b/templates/habitaciones.html
@@ -1,37 +1,40 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Habitaciones</title>
-</head>
-<body>
-    <h1>Habitaciones</h1>
-    <a href="/habitaciones/nueva">Registrar nueva habitación</a>
-    <table border="1">
+{% extends 'layout.html' %}
+
+{% block title %}Habitaciones{% endblock %}
+
+{% block content %}
+<h1>Habitaciones</h1>
+
+<a class="button" href="/habitaciones/nueva" >Registrar nueva habitación</a>
+
+<table>
+    <thead>
         <tr>
             <th>ID</th>
             <th>Número</th>
             <th>Tipo</th>
             <th>Precio</th>
             <th>Estado</th>
+            <th>Acciones</th>
         </tr>
-        {% for h in habitaciones %}
+    </thead>
+    <tbody>
+        {% for habitacion in habitaciones %}
         <tr>
-            <td>{{ h[0] }}</td>
-            <td>{{ h[1] }}</td>
-            <td>{{ h[2] }}</td>
-            <td>{{ h[3] }}</td>
-            <td>{{ h[4] }}</td>
+            <td>{{ habitacion[0] }}</td>
+            <td>{{ habitacion[1] }}</td>
+            <td>{{ habitacion[2] }}</td>
+            <td>{{ habitacion[3] }}</td>
+            <td>{{ habitacion[4] }}</td>
+            <td>
+                <a class="button" href="/habitaciones/editar/{{ habitacion[0] }}" >Editar</a>
+                <a class="button" href="/habitaciones/eliminar/{{ habitacion[0] }}"  onclick="return confirm('¿Eliminar habitación?')">Eliminar</a>
+            </td>
         </tr>
-        
-        <th>Acciones</th>
-        
-        <td>
-            <a href="/habitaciones/editar/{{ h[0] }}">Editar</a> |
-            <a href="/habitaciones/eliminar/{{ h[0] }}" onclick="return confirm('¿Eliminar habitación?')">Eliminar</a>
-        </td>
         {% endfor %}
-    </table>
-    <a href="/dashboard">Volver</a>
-</body>
-</html>
+    </tbody>
+</table>
+
+<a class="button" href="/dashboard">Volver</a>
+{% endblock %}
+
