--- a/templates/editar_cliente.html
+++ b/templates/editar_cliente.html
@@ -1,18 +1,23 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Editar Cliente</title>
-</head>
-<body>
-    <h2>Editar Cliente</h2>
-    <form method="POST" action="/clientes/editar/{{ cliente[0] }}">
-        <input type="text" name="nombre" value="{{ cliente[1] }}" required><br>
-        <input type="email" name="email" value="{{ cliente[2] }}" required><br>
-        <input type="text" name="telefono" value="{{ cliente[3] }}" required><br>
-        <input type="text" name="dni" value="{{ cliente[4] }}" required><br>
-        <button type="submit">Actualizar</button>
-    </form>
-    <a href="/clientes">Volver</a>
-</body>
-</html>
+{% extends 'layout.html' %}
+
+{% block title %}Editar Cliente{% endblock %}
+
+{% block content %}
+<h2>Editar Cliente</h2>
+<form method="POST" action="/clientes/editar/{{ cliente[0] }}">
+    <label for="nombre">Nombre:</label><br>
+    <input type="text" id="nombre" name="nombre" value="{{ cliente[1] }}" required><br><br>
+
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" value="{{ cliente[2] }}" required><br><br>
+
+    <label for="telefono">Teléfono:</label><br>
+    <input type="text" id="telefono" name="telefono" value="{{ cliente[3] }}" required><br><br>
+
+    <label for="dni">DNI:</label><br>
+    <input type="text" id="dni" name="dni" value="{{ cliente[4] }}" required><br><br>
+
+    <button class="button" type="submit">Actualizar</button>
+</form>
+<a class="button" href="/clientes">Volver</a>
+{% endblock %}
