--- a/templates/habitaciones.html
+++ b/templates/habitaciones.html
@@ -3,7 +3,7 @@
 {% block title %}Habitaciones{% endblock %}
 
 {% block content %}
-<h1>Habitaciones</h1>
+<h2 class="section-title">Lista de <span class="highlight">Habitaciones</span></h2>
 
 <a class="button" href="/habitaciones/nueva" >Registrar nueva habitación</a>
 
