--- a/templates/clientes.html
+++ b/templates/clientes.html
@@ -3,7 +3,7 @@
 {% block title %}Clientes{% endblock %}
 
 {% block content %}
-<h2>Clientes Registrados</h2>
+<h2 class="section-title">Clientes <span class="highlight">Registrados</span></h2>
 <a class="button" href="/clientes/nuevo">Registrar nuevo cliente</a>
 <table>
     <tr>
