--- a/templates/pagos.html
+++ b/templates/pagos.html
@@ -3,7 +3,7 @@
 {% block title %}Pagos{% endblock %}
 
 {% block content %}
-<h2>Lista de Pagos</h2>
+<h2 class="section-title">Historial de <span class="highlight">Pagos</span></h2>
 <a class="button" href="/pagos/nuevo">Registrar nuevo pago</a>
 <table>
     <tr>
