--- a/templates/reportes.html
+++ b/templates/reportes.html
@@ -3,7 +3,7 @@
 {% block title %}Reportes{% endblock %}
 
 {% block content %}
-<h2>Reportes</h2>
+<h2 class="section-title">Generar <span class="highlight">Reportes</span></h2>
 
 <h3>Habitaciones Ocupadas</h3>
 <table>
