--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -3,7 +3,7 @@
 {% block title %}Reservas{% endblock %}
 
 {% block content %}
-<h2>Lista de Reservas</h2>
+<h2 class="section-title">Lista de <span class="highlight">Reservas</span></h2>
 <a class="button" href="/reservas/nueva">Crear nueva reserva</a>
 <table>
     <tr>
