--- a/templates/login.html
+++ b/templates/login.html
@@ -12,5 +12,13 @@
     <input type="password" id="password" name="password" placeholder="Contraseña" required><br><br>
 
     <button class="button" type="submit">Entrar</button>
+
 </form>
+<br>
+<p>
+
+    <a href="{{ url_for('registro') }}" class="button">Registrarse</a>
+
+</p>
+
 {% endblock %}
